added user authentication and edit options

--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -3,9 +3,11 @@
     <div class="field has-addons has-addons-right is-horizontal">
       <p class="control has-icons-left">
         <span class="select">
-          <select name="directors">
+          <select name="director">
             <option selected disabled>Director</option>
-            
+            <% directorNames.forEach(director => { %>
+                <option<% if(director === selectedDirector) { %> selected<% } %>><%= director %></option>
+              <% }) %>
           </select>
         </span>
         <span class="icon is-small is-left">
