--- a/views/directors/index.ejs
+++ b/views/directors/index.ejs
@@ -1,10 +1,10 @@
-<h1 class="title is-2">Directors</h1>
+<h1 class="title is-1">Directors</h1>
 <ul class="columns is-multiline">
   <% directors.forEach(director => { %>
     <li class="column is-half">
       <div class="box">
-        <h2><%= director.name %></h2>
-        <img src="<%= director.image %>" alt="<%= director.name %>">
+        <h2 class="title is-2"><%= director.name %></h2>
+        <img src="<%= director.image %>" alt="<%= director.name %>"><p><%= director.synopsis %></p>
         <p><%= director.country %></p>
       </div>
     </li>
