--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,4 +1,4 @@
-  <nav class="navbar">
+  <nav class="navbar is-fixed-top">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <img src="https://cdn0.iconfinder.com/data/icons/awards-6/500/award_oscar-512.png" alt="BestMovies">
