--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,9 @@
 <body>
   <%- include ./partials/_navbar %>
   <% if(!locals.isHomepage) { %><main class="section"><% } %>
-  <%# //ricorda di inserire i messaggi%>
+    <% for (const type in messages) { %>
+        <p class="notification is-<%= type %>"><%= messages[type] %></p>
+      <% } %>
     <%- body %>
   <% if(!locals.isHomepage) { %></main><% } %>
   <%- include ./partials/_scripts %>
