--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -13,6 +13,18 @@
       </div>
     </div>
     <div class="field">
+      <label class="label">Wikipedia</label>
+      <div class="control">
+        <input class="input" name="wiki" type="text" placeholder="Wikipedia link" required>
+      </div>
+    </div>
+    <div class="field">
+      <label class="label">Youtube</label>
+      <div class="control">
+        <input class="input" name="youtube" type="text" placeholder="Youtube link" required>
+      </div>
+    </div>
+    <div class="field">
       <label class="label">Image</label>
       <div class="control">
         <input class="input" name="image" type="text" placeholder="Image" required>
