--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,7 +18,19 @@ body{
 p{
   color: black;
 }
-// .is-fixed-top{
-//   position: fixed;
-//   width: 100%;
-// }
+form.favorite button {
+  background: transparent;
+  border: none;
+  position: absolute;
+  color: red;
+  outline: none;
+  z-index: 1;
+}
+.is-fixed-top{
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+}
+.section {
+    padding: 5rem 1.5rem;
+}
