--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -12,7 +12,16 @@
         <i class="fa fa-pencil"></i>
       </div>
       <p><%= movie.filmSynopsis %></p>
-        <% if(locals.isAuthenticated) { %>
+      <% if(locals.isAuthenticated) { %>
+      <form method="POST" action="/movies/<%= movie.id %>/favorite" class="favorite">
+            <button>
+              <% if(locals.currentUser.hasFavorited(movie)) { %>
+                <i class="fa fa-heart"></i>
+              <% } else { %>
+                <i class="fa fa-heart-o"></i>
+              <% } %>
+            </button>
+          </form>
       <a class="button is-primary" href="/movies/<%= movie.id %>/edit">Edit Synopsis</a>
       <% } %>
       <br><br>
@@ -55,9 +64,7 @@
     <% if(locals.isAuthenticated) { %>
       <form method="POST" action="/movies/<%= movie.id %>/comments">
         <div>
-          <h3 class="title is-3">Leave your comment & rating below</h3>
-          <label>Name</label>
-          <input type="text" name="username">
+          <p>Leave your comment & rating below</p>
         </div>
         <div>
           <label>Comment</label>
