added favorite button and page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Movies</title>
+  <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/awards-6/500/award_oscar-512.png">
   <%- include ./partials/_stylesheets %>
 </head>
 <body>
