--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@
   position: absolute;
   width: 100%;
   z-index: 10;
-  background-color: grey;
+  background-color: black;
 }
 body{
   background-color: grey;
