--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <section class="hero is-large homepage">
   <div class="hero-body">
     <div class="container has-text-left">
-      <h1 class="title">Best Movies</h1>
-      <h2 class="subtitle">For movies lovers</h2>
+      <%# <h1 class="title">Best Movies</h1>
+      <h2 class="subtitle">For movies lovers</h2>%>
     </div>
   </div>
 </section>
