--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,5 +15,6 @@
     <%- body %>
   <% if(!locals.isHomepage) { %></main><% } %>
   <%- include ./partials/_scripts %>
+  <%- include ./partials/_footer %>
 </body>
 </html>
