--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -21,6 +21,7 @@
         <% } else {%>
           <a class="navbar-item" href="/users/<%= locals.currentUser.id %>">My favorites</a>
           <a class="navbar-item" href="/movies/new">New Movie</a>
+          <a class="navbar-item" href="/directors/new">New Director</a>
           <a class="navbar-item" href="/logout">Logout</a>
           <% } %>
       </div>
