--- a/views/directors/index.ejs
+++ b/views/directors/index.ejs
@@ -4,19 +4,18 @@
     <li class="column is-half">
       <div class="box">
         <a href="<%= director.wiki %>" target="_blank"><h2 class="title is-2"><%= director.name %></h2>
-        <img src="<%= director.image %>" alt="<%= director.name %>"></a><p><%= director.synopsis %></p>
+          <img src="<%= director.image %>" alt="<%= director.name %>"></a><p><%= director.synopsis %></p>
         <p><%= director.country %></p>
       </div>
     </li>
-  <% if(locals.isAuthenticated) { %>
-
-  <a class="button is-primary" href="/directors/<%= director.id %>/edit">Edit</a>
-  
-  <form method="POST" action="/directors/<%= director.id %>">
-    <input type="hidden" name="_method" value="DELETE">
-    <button class="button is-danger">Delete</button>
-  </form>
-  <% } %>
-  
-    <% }) %>
+    <% if(locals.isAuthenticated) { %>
+      <a class="button is-primary" href="/directors/<%= director.id %>/edit">Edit</a>
+    <% } %>
+    <% if(locals.isAuthenticated && director.user && director.user.id === locals.currentUser.id) {%>
+      <form method="POST" action="/directors/<%= director.id %>">
+        <input type="hidden" name="_method" value="DELETE">
+          <button class="button is-danger">Delete</button>
+      </form>
+    <% } %>  
+  <% }) %>
 </ul>
