--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -7,21 +7,33 @@
   </div>
   <div class="field">
     <label class="label">Email</label>
-    <div class="control">
-      <input class="input" name="email" type="text" placeholder="Email" required>
-    </div>
+    <p class="control has-icons-left has-icons-right">
+      <input class="input" type="email" placeholder="Email">
+      <span class="icon is-small is-left">
+        <i class="fa fa-envelope"></i>
+      </span>
+      <span class="icon is-small is-right">
+        <i class="fa fa-check"></i>
+      </span>
+    </p>
   </div>
   <div class="field">
     <label class="label">Password</label>
-    <div class="control">
-      <input class="input" name="password" type="password" placeholder="Password" required>
-    </div>
+    <p class="control has-icons-left">
+      <input class="input" type="password" placeholder="Password">
+      <span class="icon is-small is-left">
+        <i class="fa fa-lock"></i>
+      </span>
+    </p>
   </div>
   <div class="field">
     <label class="label">Confirm Password</label>
-    <div class="control">
-      <input class="input" name="passwordConfirmation" type="password" placeholder="Confirm Password" required>
-    </div>
+    <p class="control has-icons-left">
+      <input class="input" type="passwordConfirmation" ype="password" placeholder="Confirm Password" required>
+      <span class="icon is-small is-left">
+        <i class="fa fa-lock"></i>
+      </span>
+    </p>
   </div>
   <div class="control">
     <button class="button is-primary">Register</button>
