fixed errors flash bug

--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -18,7 +18,6 @@
           </div>
         </div>
       </div>
-    </div>
     <div class="field">
       <label class="label">Year</label>
       <div class="control">
@@ -46,7 +45,7 @@
     <div class="field">
       <label class="label">Film Synopsis</label>
       <div class="control">
-        <textarea class="textarea" name="filmSynopsis" placeholder="Film Synopsis" maxlength="580"></textarea>
+        <textarea class="textarea" name="filmSynopsis" placeholder="Film Synopsis" maxlength="580" required></textarea>
       </div>
     </div>
     <div class="control">
