--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
-        <strong>Movies</strong> by <a href="http://giovannigaliero.co.uk/" target="_blank">Giovanni Galiero</a>
+        <strong>Best Movies</strong> by <a href="http://giovannigaliero.co.uk/" target="_blank">Giovanni Galiero</a>
       </p>
       <p>Made with &hearts; at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI 29</p>
       <p>
