--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -8,19 +8,16 @@
   <div class="field">
     <label class="label">Email</label>
     <p class="control has-icons-left has-icons-right">
-      <input class="input" type="email" placeholder="Email">
+      <input class="input" type="email" placeholder="Email" name="email" required>
       <span class="icon is-small is-left">
         <i class="fa fa-envelope"></i>
-      </span>
-      <span class="icon is-small is-right">
-        <i class="fa fa-check"></i>
       </span>
     </p>
   </div>
   <div class="field">
     <label class="label">Password</label>
     <p class="control has-icons-left">
-      <input class="input" type="password" placeholder="Password">
+      <input class="input" type="password" placeholder="Password" name="password" required>
       <span class="icon is-small is-left">
         <i class="fa fa-lock"></i>
       </span>
@@ -29,7 +26,7 @@
   <div class="field">
     <label class="label">Confirm Password</label>
     <p class="control has-icons-left">
-      <input class="input" type="passwordConfirmation" ype="password" placeholder="Confirm Password" required>
+      <input class="input" type="password" name="passwordConfirmation" placeholder="Confirm Password" required>
       <span class="icon is-small is-left">
         <i class="fa fa-lock"></i>
       </span>
