--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<section class="hero is-large homepage">
+<section class="hero is-fullheight homepage">
   <div class="hero-body">
     <div class="container has-text-left">
       <%# <h1 class="title">Best Movies</h1>
