--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,7 +1,5 @@
-<footer class="footer">
-  <div class="container">
+<footer class="hero-foot">
     <div class="content has-text-centered">
-      <p>
         <strong>Best Movies</strong> by <a href="http://giovannigaliero.co.uk/" target="_blank">Giovanni Galiero</a>
       </p>
       <p>Made with &hearts; at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI 29</p>
@@ -15,7 +13,5 @@
         <a class="icon" href="https://twitter.com/GiovanniGaliero" target="_blank">
           <i class="fa fa-twitter"></i>
         </a>
-      </p>
     </div>
-  </div>
 </footer>
