--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -41,6 +41,7 @@
             <div class="card-content">
               <h3 class="title"><%= movie.title %></h3>
               <h4 class="subtitle"><%= movie.year %></h4>
+              <%- movie.getStarIcons() %>
             </div>
           </div>
         </a>
