--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -1,4 +1,6 @@
+<div class="center">
 <form method="POST" action="/register">
+  <div class="column is-two-third">
   <div class="field">
     <label class="label">Username</label>
     <div class="control">
@@ -35,4 +37,6 @@
   <div class="control">
     <button class="button is-primary">Register</button>
   </div>
+</div>
 </form>
+</div>
