--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -2,10 +2,13 @@
     <div class="content has-text-centered">
         <strong>Best Movies</strong> by <a href="http://giovannigaliero.co.uk/" target="_blank">Giovanni Galiero</a>
       </p>
-      <p>Made with &hearts; at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI 29</p>
+      <p>Made with <i class="fa fa-heartbeat"></i> at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI 29</p>
       <p>
         <a class="icon" href="https://github.com/Gio85" target="_blank">
           <i class="fa fa-github"></i>
+        </a>
+        <a class="icon" href="https://www.linkedin.com/in/giovanni-galiero-8ab169120/" target="_blank">
+          <i class="fa fa-linkedin-square"></i>
         </a>
         <a class="icon" href="https://www.facebook.com/ggaliero" target="_blank">
           <i class="fa fa-facebook"></i>
