adding some style

--- a/views/directors/edit.ejs
+++ b/views/directors/edit.ejs
@@ -32,7 +32,12 @@
       </div>
     </div>
     <div class="control">
-      <button class="button is-primary">Submit</button>
+      <button class="button is-success">
+        <span class="icon is-small">
+          <i class="fa fa-check"></i>
+        </span>
+        <span>Save</span>
+      </button>
     </div>
   </form>
 </div>
