--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,6 +52,17 @@ body{
 p{
   color: white;
 }
+.button.is-danger.is-outlined {
+    background-color: transparent;
+    border-color: red;
+    color: red;
+    font-size: x-small;
+}
+.button.is-danger.is-outlined:hover {
+    background-color: red;
+    border-color: red;
+    color: black;
+}
 .box p {
   color: black;
   }
