--- a/views/directors/new.ejs
+++ b/views/directors/new.ejs
@@ -1,4 +1,6 @@
+
 <div class="container">
+  <h2 class="title is-2">New Director</h2>
   <form method="POST" action="/directors">
     <div class="field">
       <label class="label">Name</label>
