--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2 class="title is-2">New Movie</h2>
   <form method="POST" action="/movies">
     <div class="field">
       <label for="title">Director</label>
