--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,9 +1,12 @@
-<footer class="hero-foot">
-    <div class="content has-text-centered">
+<footer class="hero-foot container">
+    <div class="columns is-text-centered">
+      <div class="column has-text-centered">
         <strong>Best Movies</strong> by <a href="http://giovannigaliero.co.uk/" target="_blank">Giovanni Galiero</a>
-      </p>
-      <p>Made with <i class="fa fa-heartbeat"></i> at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI 29</p>
-      <p>
+      </div>
+      <div class="column has-text-centered">
+        <p>Made with <i class="fa fa-heartbeat"></i> at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI 29</p>
+      </div>
+      <div class="column has-text-centered">
         <a class="icon" href="https://github.com/Gio85" target="_blank">
           <i class="fa fa-github"></i>
         </a>
@@ -16,5 +19,6 @@
         <a class="icon" href="https://twitter.com/GiovanniGaliero" target="_blank">
           <i class="fa fa-twitter"></i>
         </a>
+      </div>
     </div>
 </footer>
