--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Movies</title>
   <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/awards-6/500/award_oscar-512.png">
   <%- include ./partials/_stylesheets %>
